Implemented moving between scenes and created Output folder
Output folder is ignored by git. When building, files such as the .exe
file should be created in this folder.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 JRPGUnityProject/Library/
 JRPGUnityProject/Temp/
 JRPGUnityProject/obj/
+JRPGUnityProject/Output/
 *.csproj
 *.unityproj
 *.sln
+*.suo
 *.user
 *.userprefs
 *.DS_store
